--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "google-auth-library": "^2.0.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.15",
     "mongoose-unique-validator": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "underscore": "^1.9.1"
   }
 }
